--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "node -r esm start",
 
     "st":   "eslint index.js lib/ test/ perf/",
-    "unit": "mocha -r esm -r test/globals test/*.test.js",
+    "unit": "mocha -r esm -r console-ultimate -r test/globals test/*.test.js",
     "test": "npm run st && npm run unit",
 
     "cover": "nyc -r text -r html npm run unit",
@@ -46,6 +46,9 @@
 
     "js-outlander":
       "StrangeTransistor/js-outlander#2.5.1",
+
+    "console-ultimate":
+      "3",
 
 
     "mocha":
