--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
 
     "perf": "node -r esm perf/perf",
 
-    "build": "gulp --final"
+    "build": "gulp --final",
+
+    "depcruise": "depcruise --exclude '^(node_modules|release|test|perf)' --output-type dot . > graph.dot",
+    "diagrams":  "diagrams dot graph.dot graph.png",
+    "graph": "npm run depcruise && npm run diagrams ##### < http://viz-js.com/ >"
   },
 
   "files":
@@ -83,6 +87,13 @@
 
 
     "flyd":
-      "0.2"
+      "0.2",
+
+
+    "dependency-cruiser":
+      "*",
+
+    "diagrams":
+      "*"
   }
 }
