use c8 for coverage.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "unit": "mocha -r esm -r console-ultimate -r test/globals test/*.test.js",
     "test": "npm run st && npm run unit",
 
-    "cover": "gulp --once && cd release/dev && nyc -r text -r html npm run unit",
+    "cover": "c8 -r text -r html npm run unit",
 
     "perf": "node -r esm perf/perf",
 
@@ -96,8 +96,8 @@
       "8",
 
 
-    "nyc":
-      "15",
+    "c8":
+      "7",
 
 
     "benny":
