--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
      "name": "fluh",
-  "version": "0.4.0",
+  "version": "0.5.0-pre",
 
   "description": "simple functional reactive library with atomic push strategy",
 
