--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 
     "build": "gulp --final --to npm",
 
-    "depcruise": "depcruise --exclude '^(node_modules|release|test|perf|coverage)' --output-type dot . > graph.dot",
+    "depcruise": "depcruise --exclude '^(node_modules|release|test|perf|coverage|start.js|.eslint|gulp)' --output-type dot . > graph.dot",
     "diagrams":  "diagrams dot graph.dot graph.png",
     "graph": "npm run depcruise && npm run diagrams ##### < http://viz-js.com/ >"
   },
