a couple of examples (resource usage).

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 
     "build": "gulp --final --to npm",
 
+    "example": "cd examples; node -r esm",
+
     "depcruise": "depcruise --exclude '^(node_modules|release|test|perf|coverage|start.js|.eslint|gulp)' --output-type dot . > graph.dot",
     "diagrams":  "diagrams dot graph.dot graph.png",
     "graph": "npm run depcruise && npm run diagrams ##### < http://viz-js.com/ >"
@@ -66,6 +68,10 @@
 
   "devDependencies":
   {
+    "fluh":
+      "./",
+
+
     "esm":
       "^3.2",
 
