--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 
     "st":   "eslint .",
     "unit": "mocha -r esm -r console-ultimate -r test/globals test/*.test.js",
-    "test": "npm run st && npm run unit",
+    "ts":   "tsc",
+    "dts":  "dtslint --expectOnly --localTs ./node_modules/typescript/lib test/type",
+    "test": "npm run st && npm run ts && npm run dts && npm run unit",
 
     "cover": "c8 npm run unit",
 
@@ -75,6 +77,9 @@
     "esm":
       "^3.2",
 
+    "console-ultimate":
+      "3",
+
     "raf":
       "3",
 
@@ -102,8 +107,11 @@
       "11",
 
 
-    "console-ultimate":
-      "3",
+    "typescript":
+      "4.5.4",
+
+    "dtslint":
+      "4",
 
 
     "mocha":
