--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 
   "scripts":
   {
-    "start": "node -r esm -r console-ultimate start",
+    "start": "node -r esm -r console-ultimate test/play",
 
     "st":   "eslint .",
     "unit": "mocha -r esm -r console-ultimate -r test/globals test/*.test.js",
