--- a/package.json
+++ b/package.json
@@ -108,6 +108,11 @@
     "eslint-plugin-node":
       "11",
 
+    "@typescript-eslint/parser":
+      "8.32.1",
+
+    "@typescript-eslint/eslint-plugin":
+      "8.32.1",
 
     "typescript":
       "5.8.3",
