--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "example":  "cd examples; ts-node -r esm -r console-ultimate",
     "examples": "cd examples; ts-node -r esm -r console-ultimate ./",
 
-    "depcruise": "depcruise --exclude '^(node_modules|release|test|perf|coverage|examples|.*\\.d\\.ts|\\.eslint|gulp)' --output-type dot . > test/graph.dot",
+    "depcruise": "depcruise --no-config --exclude '^(node_modules|release|test|perf|coverage|examples|.*\\.d\\.ts|eslint|gulp)' --output-type dot . > test/graph.dot",
     "diagrams":  "graphviz -Tsvg -otest/graph.svg test/graph.dot",
     "graph": "npm run depcruise && npm run diagrams && open-cli test/graph.svg ##### < http://viz-js.com/ >",
 
@@ -151,7 +151,7 @@
 
 
     "dependency-cruiser":
-      "11",
+      "16",
 
     "diagrams":
       "0.11",
