--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,6 @@
 		"target": "ES6",
 		"lib":  [ "ES6" ],
 
-		"moduleResolution": "node",
-
-		"paths":
-		{
-			"undici-types":
-			[
-				"./node_modules/undici-types/index.d.ts"
-			],
-		}
+		"moduleResolution": "node"
 	}
 }
